# pyclique

./: .gitignore  README.md  clique.py  pyproject.toml  setup.py
examples/: basic_benchmark.py
ignore/: scratchpad.py  set_util_native.cpp  set_util_native.pyx
src/pyclique/: __init__.py  clique.py  list_funcs.py  meta.py  set.cpp  set_util.py  set_util_fast.py  set_util_native.cpp  set_util_native.pyx  set_util_typed.py  utility.py
tests/: test_BK.py  test_set.py
