[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclique"
version = "0.0.2"
description = "Enumerates maximal cliques"
authors = [
  { name = "Matt Piekenbrock", email = "matt.piekenbrock@gmail.com" },
  { name = "Alex Pickering", email = "alex.pickering15@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["clique"]
license = { file = "LICENSE" }
dependencies = [
  "numpy",
  "networkx"
]